bases/grav/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: grav
  name: grav
  annotations:
    kube-score/ignore: container-image-tag,container-security-context-readonlyrootfilesystem, container-security-context-user-group-id, pod-networkpolicy
spec:
  replicas: 1
  minReadySeconds: 30
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: grav
  template:
    metadata:
      labels:
        app: grav
    spec:
      containers:
        - name: grav
          image: ghcr.io/clubcedille/grav:latest
          imagePullPolicy: Always
          command:
            - /opt/grav-bootstrap/bootstrap.sh
          ports:
            - containerPort: 8080
          startupProbe:
            httpGet:
              path: /
              port: 8080
            failureThreshold: 30
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          volumeMounts:
            - name: grav-bootstrap
              mountPath: /opt/grav-bootstrap
              readOnly: true
            - name: grav-accounts
              mountPath: /var/www/html/user/accounts
            - name: grav-data
              mountPath: /var/www/html/user/data
          resources:
            requests:
              cpu: 300m
              memory: 256Mi
              ephemeral-storage: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
              ephemeral-storage: 1Gi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
      securityContext:
        # group 33 is www-data
        runAsUser: 33
        runAsGroup: 33
        runAsNonRoot: true
        fsGroup: 33
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: grav-bootstrap
          configMap:
            name: grav-bootstrap
            defaultMode: 0555
        - name: grav-accounts
          persistentVolumeClaim:
            claimName: grav-accounts-pvc
        - name: grav-data
          persistentVolumeClaim:
            claimName: grav-data-pvc
