bases/grav/network.yaml
apiVersion: v1
kind: Service
metadata:
  name: grav
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: grav
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: grav-ingress
spec:
  virtualhost:
    fqdn: grav.prod.cedille.club
    tls:
      secretName: grav-tls
      minimumProtocolVersion: "1.3"
  routes:
    - conditions:
        - prefix: /
      services:
        - name: grav
          port: 80
